--- a/pegasus/sites.v3/hourofcode.com/styles/040-page.css
+++ b/pegasus/sites.v3/hourofcode.com/styles/040-page.css
@@ -487,7 +487,7 @@ swiper-slide {
 /* Video carousel styles */
 .carousel-wrapper.video-carousel swiper-slide {
   display: block;
-  text-align: left;
+  text-align: initial;
 }
 
 .carousel-wrapper.video-carousel iframe {
